<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_marginTop="56dp"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Spinner
        android:id="@+id/static_spinner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/drawables"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edit_number"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:layout_below="@id/static_spinner"
        android:layout_alignParentStart="true"
        android:hint="@string/edit_number"
        android:gravity="center"
        android:textColor="?attr/colorPrimary"
        android:paddingTop="0dp"
        android:fontFamily="sans-serif-light"
        android:paddingBottom="15dp" />

    <TextView
        android:id="@+id/repsmins"
        style="@style/mainText"
        android:layout_toRightOf="@+id/edit_number"
        android:paddingLeft="8dp"
        android:text="reps" />

    <TextView
        android:id="@+id/burns"
        style="@style/mainText"
        android:layout_toRightOf="@id/repsmins"
        android:paddingLeft="5dp"
        android:text="@string/burns" />

    <TextView
        android:id="@+id/calories"
        style="@style/boldGreen"
        android:layout_below="@+id/static_spinner"
        android:layout_toRightOf="@id/burns"
        android:text="@string/calories" />

    <TextView
        android:id="@+id/finalcals"
        style="@style/boldGreen"
        android:layout_toRightOf="@id/calories"
        android:text="@string/final_calories" />

    <View
        android:id="@+id/green_line"
        android:layout_width="match_parent"
        android:layout_below="@+id/edit_number"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary" />

    <TextView
        android:id="@+id/equiv_text"
        android:textColor="#808080"
        android:textSize="13sp"
        android:fontFamily="sans-serif-light"
        android:layout_below="@+id/green_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/equiv_text" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:stretchColumns="0,0,1"
        android:layout_below="@id/equiv_text">

        <TableRow>
            <TextView
                android:id="@+id/equiv_rm0"
                style="@style/convFont" />
            <TextView
                style="@style/convFont2"
                android:text="@string/push_ups" />
        </TableRow>
        <View
            android:id="@+id/gray_line"
            style="@style/grayLine" />
        <TableRow>
            <TextView
                android:id="@+id/equiv_rm1"
                style="@style/convFont" />
            <TextView
                style="@style/convFont2"
                android:text="@string/sit_ups" />
        </TableRow>
        <View
            android:id="@+id/gray_line"
            style="@style/grayLine" />
        <TableRow>
            <TextView
                android:id="@+id/equiv_rm2"
                style="@style/convFont" />
            <TextView
                style="@style/convFont2"
                android:text="@string/squats" />
        </TableRow>
        <View
            android:id="@+id/gray_line"
            style="@style/grayLine" />
        <TableRow>
            <TextView
                android:id="@+id/equiv_rm3"
                style="@style/convFont" />
            <TextView
                style="@style/convFont2"
                android:text="@string/leg_lifts" />
        </TableRow>
        <View
            android:id="@+id/gray_line"
            style="@style/grayLine" />
        <TableRow>
            <TextView
                android:id="@+id/equiv_rm4"
                style="@style/convFont" />
            <TextView
                style="@style/convFont2"
                android:text="@string/planks" />
        </TableRow>
        <View
            android:id="@+id/gray_line"
            style="@style/grayLine" />
        <TableRow>
            <TextView
                android:id="@+id/equiv_rm5"
                style="@style/convFont" />
            <TextView
                style="@style/convFont2"
                android:text="@string/jumping_jacks" />
        </TableRow>
        <View
            android:id="@+id/gray_line"
            style="@style/grayLine" />
        <TableRow>
            <TextView
                android:id="@+id/equiv_rm6"
                style="@style/convFont" />
            <TextView
                style="@style/convFont2"
                android:text="@string/pull_ups" />
        </TableRow>
        <View
            android:id="@+id/gray_line"
            style="@style/grayLine" />
        <TableRow>
            <TextView
                android:id="@+id/equiv_rm7"
                style="@style/convFont" />
            <TextView
                style="@style/convFont2"
                android:text="@string/cycling" />
        </TableRow>
        <View
            android:id="@+id/gray_line"
            style="@style/grayLine" />
        <TableRow>
            <TextView
                android:id="@+id/equiv_rm8"
                style="@style/convFont" />
            <TextView
                style="@style/convFont2"
                android:text="@string/walking" />
        </TableRow>
        <View
            android:id="@+id/gray_line"
            style="@style/grayLine" />
        <TableRow>
            <TextView
                android:id="@+id/equiv_rm9"
                style="@style/convFont" />
            <TextView
                style="@style/convFont2"
                android:text="@string/jogging" />
        </TableRow>
        <View
            android:id="@+id/gray_line"
            style="@style/grayLine" />
        <TableRow>
            <TextView
                android:id="@+id/equiv_rm10"
                style="@style/convFont" />
            <TextView
                style="@style/convFont2"
                android:text="@string/swimming" />
        </TableRow>
        <View
            android:id="@+id/gray_line"
            style="@style/grayLine" />
        <TableRow>
            <TextView
                android:id="@+id/equiv_rm11"
                style="@style/convFont" />
            <TextView
                style="@style/convFont2"
                android:text="@string/stair_climbing" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
</ScrollView>
